--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,11 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
+            "assets": ["src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+                        }
             ],
             "styles": [
               "src/styles.css"
